# TauRPC

./: README.md  dprint.json  package.json
src/: index.ts
taurpc/: Cargo.toml  build.rs
taurpc/src/: export.rs  lib.rs
taurpc/taurpc-macros/: Cargo.toml
taurpc/taurpc-macros/src/: generator.rs  lib.rs  proc.rs
