[package]
name = "taurpc"
authors = ["MatsDK"]
version = "0.5.2"
edition = "2021"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []
rust-version = "1.77.2"

[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
taurpc-macros = { path = "./taurpc-macros", version = "=0.5.2" }

itertools = "0.14"
tauri = { version = "2", features = ["specta"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

specta = { version = "=2.0.0-rc.22", features=["export", "function"] }
specta-typescript = { version = "0.0", features = ["function"] }
specta-macros = { version = "2.0.0-rc.18" }
heck = "0.5"
anyhow = "1"

[workspace]
resolver = "3"
members = [
  "taurpc-macros",
]
