[package]
name = "taurpc"
authors = ["MatsDK", "johncarmack1984"]
version = "0.5.2"
edition = "2021"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/fltsci/TauRPC"
repository = "https://github.com/fltsci/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []
rust-version = "1.77.2"

[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
taurpc-macros = { path = "./taurpc-macros", version = "=0.5.2" }

itertools = "0.14"
tauri = { version = "2.9", features = ["specta"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }

specta = { version = "=2.0.0-rc.22", features = ["export", "function"] }
specta-serde = { version = "0.0.9", features = [] }
specta-typescript = { version = "0.0.9", features = ["function"] }
heck = "0.5"
anyhow = "1"

[dev-dependencies]
tauri = { version = "2", features = ["specta", "test"] }

[workspace]
resolver = "3"
members = ["taurpc-macros"]
