[package]
name = "taurpc-macros"
version = "0.5.2"
edition = "2021"
description = "Macros for the taurpc crate"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/fltsci/TauRPC"
repository = "https://github.com/fltsci/TauRPC"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.77.2"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde_json = { version = "1", features = ["preserve_order"] }
